--- a/P4/info/T.html
+++ b/P4/info/T.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="UTF-8">
-        <title>Green server</title>
+        <title>Thymine</title>
     </head>
     <body style="background-color: pink;">
         <h1>TIMINE</h1>
         <p>Letter: T</p>
         <p>Chemical formula:C5H6N202</p>
-        <t href="https://en.wikipedia.org/">Wikipedia</t>
+        <t href="https://en.wikipedia.org/wiki/Adenine">More info</t>
     </body>
 </html>
