--- a/P4/index.html
+++ b/P4/index.html
@@ -2,10 +2,11 @@
     <html lang="en" dir="ltr">
       <head>
         <meta charset="utf-8">
-        <title>Green server</title>
+        <title>bases</title>
       </head>
-      <body style="background-color: lightgreen;">
-        <h1>GREEN SERVER</h1>
-        <p>I am the Green Server! :-)</p>
+      <body style="background-color: white;">
+        <h1>BASES INFORMATION</h1>
+        <p>Click for more information</p>
+        <p>[<a href="/info/A" target="_blank">A</a>][<a href="/info/C" target="_blank">C</a>][<a href="/info/G" target="_blank">G</a>][<a href="/info/T" target="_blank">T</a>]</p>
       </body>
     </html>
