--- a/P4/info/C.html
+++ b/P4/info/C.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="UTF-8">
-        <title>Green server</title>
+        <title>Citosine</title>
     </head>
     <body style="background-color: yellow;">
         <h1>CITOSINE</h1>
         <p>Letter: C</p>
         <p>Chemical formula:C4H5N30</p>
-        <c href="https://en.wikipedia.org/">Wikipedia</c>
+        <c href="https://en.wikipedia.org/wiki/Citosine">More info</c>
     </body>
 </html>
