--- a/P4/info/G.html
+++ b/P4/info/G.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="UTF-8">
-        <title>Green server</title>
+        <title>Guanine</title>
     </head>
     <body style="background-color: lightblue;">
         <h1>GUANINE</h1>
         <p>Letter: G</p>
         <p>Chemical formula:C5H5N50</p>
-        <g href="https://en.wikipedia.org/">Wikipedia</g>
+        <g href="https://en.wikipedia.org/wiki/Adenine">More info</g>
     </body>
 </html>
