--- a/P4/A.html
+++ b/P4/A.html
@@ -8,6 +8,6 @@
             <h1>ADENINE</h1>
             <p>Letter: A</p>
             <p>Chemical formula:C5H5N5</p>
-            <a href="https://en.wikipedia.org/wiki/Adenine" target="_blank">More info</a> #hipervinculo q me lleva a otra pagina, con target me abre una pag distinta
+            <a href="https://en.wikipedia.org/wiki/Adenine" target="_blank">More info</a>
         </body>
     </html>
