--- a/P4/index.html
+++ b/P4/index.html
@@ -2,7 +2,7 @@
     <html lang="en" dir="ltr">
       <head>
         <meta charset="utf-8">
-        <title>bases</title>
+        <title>Bases</title>
       </head>
       <body style="background-color: white;">
         <h1>BASES INFORMATION</h1>
