--- a/Session-16/Form-ex2.html
+++ b/Session-16/Form-ex2.html
@@ -8,6 +8,8 @@
     <form action="echo" method="get">
         <h1>Echo Server</h1>
         Message to send to the server: <br>
+        <input type="text" name="msg"><br>
+        Echo in capital letters:
         <input type="checkbox" name="capital_letters"><br><br>
         <input type="submit" value="SEND">
     </form>
