--- a/P6/Form1.html
+++ b/P6/Form1.html
@@ -9,9 +9,8 @@
     <p>Access to the server</p>
     <hr>
     <form action="ping" method="get">
-      Message to send to the server: <br>
-      <input type="text" name="msg">
-      <input type="submit" value="SEND">
+      Is the server alive?
+      <input type="submit" value="PING">
     </form>
   </body>
 </html>
