--- a/P6 clase/html/get.html
+++ b/P6 clase/html/get.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Seq2 server</title>
+    <title>Seq2 Server</title>
 </head>
 <body>
-    <p>Sequence number: {{context.n_sequence}}</p>
-    <p>Sequence: {{context.sequence}}</p>
+    <h2>Sequence number {{context.n_sequence}}</h2>
+    <p>Sequence: {{context.sequence}} </p>
     <a href="/">Main page</a>
 </body>
 </html>
