--- a/P6 clase/html/operation.html
+++ b/P6 clase/html/operation.html
@@ -11,7 +11,7 @@
     <hr>
     <form action="operation" method="get">
         Write a sequence:
-        <input type="text" name="bases">
+        <input type="text" name="sequence">
         <br>
         Select an operation
             <input type="radio" name="op" value="info" checked> Info
