--- a/P6 clase/html/index.html
+++ b/P6 clase/html/index.html
@@ -35,6 +35,8 @@
     <form action="/operation">
         Sequence: <input type="text" name="sequence">
         Rev: <input type="radio" name="operation" value="rev">
+        Comp: <input type="radio" name="operation" value="comp">
+        Info: <input type="radio" name="operation" value="info">
         <input type="submit" value="OPERATE">
     </form>
 </body>
