--- a/Final-Project/html/index.html
+++ b/Final-Project/html/index.html
@@ -5,7 +5,7 @@
     <title>FINAL PROJECT</title>
   </head>
   <h1>Browsing Human and Vertebrates genome</h1>
-  <body style="background-color: moccasin">
+  <body style="background-color: lightskyblue">
 
     <form action="listSpecies" method="get">
       <br>
