--- a/Final-Project/html/index.html
+++ b/Final-Project/html/index.html
@@ -9,12 +9,72 @@
 
     <form action="listSpecies" method="get">
       <br>
-      <b>1. List of species in the genome database</b>
+      <b>1. List of species</b>
       <br>
       Limit:  <input type="text" name="limit">
       <br>
         <br>
         <input type="submit" value="Send"/>
     </form>
+
+    <form action="karyotype" method="get">
+      <br>
+      <b>2. Information about the karyotype</b>
+      <br>
+      Select the species:  <input type="text" name="specie">
+      <br>
+      <br>
+        <input type="submit" value="Send"/>
+      <br>
+    </form>
+
+    <form action="chromosomeLength" method="get">
+      <br>
+      <b>3. Chromosome Length</b>
+      <br>
+      Select the species:  <input type="text" name="specie">
+      <br>
+      <br>
+      Select a chromosome:  <input type="text" name="chromosome">
+      <br>
+      <br>
+        <input type="submit" value="Send"/>
+      <br>
+    </form>
+
+
+   <form action="geneSeq" method="get">
+      <br>
+      <b>4. Sequence human gene</b>
+      <br>
+      Select the gene:  <input type="text" name="gene">
+      <br>
+      <br>
+        <input type="submit" value="Send"/>
+      <br>
+    </form>
+
+   <form action="geneInfo" method="get">
+      <br>
+      <b>5. Information human gene</b>
+      <br>
+      Select the gene:  <input type="text" name="gene">
+      <br>
+      <br>
+        <input type="submit" value="Send"/>
+      <br>
+    </form>
+
+    <form action="geneCalc" method="get">
+      <br>
+      <b>6. Calculations human gene</b>
+      <br>
+      Select the gene:  <input type="text" name="gene">
+      <br>
+      <br>
+        <input type="submit" value="Send"/>
+      <br>
+    </form>
+
   </body>
 </html>
