--- a/Final-Project/html/karyotype.html
+++ b/Final-Project/html/karyotype.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>Karyotype</title>
