--- a/Final-Project/html/index.html
+++ b/Final-Project/html/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <title>FINAL PROJECT</title>
   </head>
-  <h1>Browsing Human and Vertebrates genome</h1>
+
   <body style="background-color: lightskyblue">
+    <h1>Browsing Human and Vertebrates genome</h1>
 
     <form action="listSpecies" method="get">
       <br>
-      <b>1. List of species</b>
+      <b>1. List of species in the genome database</b>
       <br>
       Limit:  <input type="text" name="limit">
       <br>
