--- a/P6 clase/html/index.html
+++ b/P6 clase/html/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>INDEX</title>
 </head>
 <body>
     <h1>Seq2 Server</h1>
     <p>Access to the server</p>
     <hr>
+
     <form action="/ping" >
-     Is the server alive? <input type="submit" value="PING">
+        Is the server alive?
+        <input type="submit" value="PING">
     </form>
     <hr>
 
