--- a/Final-Project/html/index.html
+++ b/Final-Project/html/index.html
@@ -77,5 +77,18 @@
       <br>
     </form>
 
+    <form action="geneList" method="get">
+        <br>
+        <b>7. Gene List</b>
+        <br>
+        Chromosome: <input type="text" name="chromo">
+        <br>
+        Start: <input type="text" name="start">
+        <br>
+        End: <input type="text" name="end">
+        <br>
+            <input type="submit" value="Send">
+        <br>
+    </form>
   </body>
 </html>
