--- a/Final-Project/html/species.html
+++ b/Final-Project/html/species.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Species</title>
   </head>
   <body style="background: lightblue">
-    <p>The total number of species in the ensembl is: {{context.total}}</p>
+    <p>The total number of species in Ensembl is: {{context.total}}</p>
     <p>The limit you have selected is: {{context.limit}}</p>
     <p>The names of the species are:</p>
     <ul>
