--- a/Hello/html/index.html
+++ b/Hello/html/index.html
@@ -13,9 +13,11 @@
       <b>1. List of species in the genome database</b>
       <br>
       Limit:  <input type="text" name="limit">
-      <br>
         <br>
+        <input type="checkbox" name="chk">
+      <br>
         <input type="submit" value="Send"/>
+      <br>
     </form>
 
     <form action="karyotype" method="get">
