--- a/P6 clase/html/operation.html
+++ b/P6 clase/html/operation.html
@@ -5,22 +5,13 @@
     <title>Seq Server</title>
 </head>
 <body>
-    <h2>Gene name: {{context.operation}}</h2>
-    Sequence: <p><textarea>{{context.sequence}} </textarea></p>
+    <h1>Sequence</h1>
+    <p>{{context.sequence}}</p>
+    <h1>Operation</h1>
+    <p>{{context.operation.upper()}}</p>
+    <h1>Result</h1>
+    <p><textarea>{{context.result}} </textarea></p>
     <a href="/">Main page</a>
-    <hr>
-    <form action="operation" method="get">
-        Write a sequence:
-        <input type="text" name="sequence">
-        <br>
-        Select an operation
-            <input type="radio" name="operation" value="info" checked> Info
-            <input type="radio" name="operation" value="comp" checked> Comp
-            <input type="radio" name="operation" value="rev" checked> Rev
-            <br>
-        Perform operation:
-        <input type="submit" value="OPERATE">
-    </form>
   </body>
 </html>
 
