--- a/Final-Project/html/chromo_length.html
+++ b/Final-Project/html/chromo_length.html
@@ -5,6 +5,6 @@
     <title>Chromosome Length</title>
   </head>
   <body style="background: lightpink">
-    <p>The length of the chromosome {{context.chromosome}} of the {{context.specie}} is: {{context.length}}</p>
+    <p> For the species {{context.specie}} , the chromosomes with a number of genes larger than {{context.chromosome}} are: {{context.list_chromo}} </p>
   </body>
 </html>
